# Italiano_Billing

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: db.py  deps.py  logging.py  main.py  security.py  settings.py
app/models/: __init__.py  base.py  content_module.py  gift_card.py  invoice.py  payment.py  plan.py  promocode.py  subscription.py  user.py  webhook_event.py
app/repositories/: content_repo.py  gift_repo.py  invoice_repo.py  payment_repo.py  plan_repo.py  promo_repo.py  subscription_repo.py
app/routers/: auth.py  content.py  payments.py  subscriptions.py
app/schemas/: auth.py  billing.py  content.py  plan.py  subscription.py
app/services/: billing_service.py  dunning_service.py  subscription_service.py
app/utils/: metrics.py  periods.py
app/workers/: scheduler.py
migrations/: env.py  script.py.mako
migrations/versions/: 38b2b78c712b_seed_content_modules.py  4345b1ba2f08_add_content_modules.py  6c44a01aed58_add_giftcard_code_to_invoices.py  deed08069019_init_core_tables.py  f4777300af94_add_gift_cards_table.py
tests/: conftest.py
tests/integration/: test_auth_basic.py  test_cancel_and_freeze.py  test_invoices_payments.py  test_migrations.py  test_payments_webhook_mock.py  test_plans_and_subscription.py  test_promocode_apply_and_limit.py  test_start_subscription_idempotent.py
tests/unit/: test_renewals_basic.py  test_security_roundtrip.py
